bug & polish: fixed wardrobe not showing big sprites properly and made wardrobe nicer

--- a/src/client/src/ui/templates/wardrobe/styles.less
+++ b/src/client/src/ui/templates/wardrobe/styles.less
@@ -3,7 +3,8 @@
 .uiWardrobe {
 	display: none;
 	width: 600px;
-	height: 350px;
+	height: 660px;
+	max-height: calc(100vh - 20px);
 	border: 5px solid @blackB;
 	text-align: center;
 	background-color: @blackC;
@@ -29,17 +30,18 @@
 		.right {
 			float: left;
 			height: 100%;
+
+			.heading {
+				color: @grayB;
+				padding: 5px;
+				background-color: @blackA;
+			}
+
 		}
 
 		.left {
 			width: calc(100% * 0.4);
-
-			.heading {
-				width: 100%;
-				height: 30px;
-				color: @yellowA;
-				padding-top: 7px;
-			}
+			border-right: 5px solid @blackB;
 
 			.list {
 				width: 100%;
@@ -49,7 +51,7 @@
 				.skinName {
 					width: 100%;
 					cursor: pointer;
-					color: white;
+					color: @grayB;
 					padding: 5px;
 
 					&:hover {
@@ -57,14 +59,11 @@
 					}
 
 					&.active {
-						color: @blueA;
+						color: @blueB;
 					}
 
 					&.current {
-						&:after {
-							content: ' (x)';
-						}
-
+						color: @blueA;
 					}
 
 				}
@@ -77,67 +76,66 @@
 			width: calc(100% * 0.6);
 			position: relative;
 			background-color: @black;
-
-			.heading {
-				width: 100%;
-				height: 30px;
-				color: @yellowA;
-				padding-top: 7px;
-			}
+			display: flex;
+			flex-direction: column;
 
 			.preview {
-				padding-left: calc((100% - (8 * 16px)) / 2);
 				position: relative;
-				height: calc(100% - 80px);
+				flex: 1;
+				pointer-events: none;
 
 				.sprite {
+					position: absolute;
+					left: 50%;
+					top: 50%;
+					transform: translate(-50%, -50%) scale(16);
+					transform-origin: 50% 50%;
+					image-rendering: pixelated;
 					width: 8px;
 					height: 8px;
-					position: absolute;
-					left: calc((100% - (8 * 16px)) / 2);
-					top: calc((100% - (8 * 16px)) / 2);
-					transform: scale(16);
-					transform-origin: 0% 0%;
-					image-rendering: optimizeSpeed;
-					image-rendering: pixelated;
-					image-rendering: crisp-edges;
+
+					&.bigSprite {
+						width: 24px;
+						height: 24px;
+						transform: translate(-50%, (-24px * 5) - 4px) scale(16);
+					}
+
 				}
 
 			}
 
 			.buttons {
 				width: 100%;
-				padding: 0px 10px;
-				height: 50px;
+				display: flex;
+				justify-content: space-between;
+				background-color: @blackB;
+				padding: 5px 5px 0px 0px;
 
 				.btn {
-					float: left;
 					width: calc((100% - 50px) / 2);
 					height: 40px;
-					padding-top: 12px;
+					padding-top: 4px;
 					color: white;
 					cursor: pointer;
-
-					&:first-child {
-						margin-right: 50px;
-					}
-
+					display: flex;
+					justify-content: center;
+					align-items: center;
 				}
 
 				.btnCancel {
-					background-color: @redB;
+					background-color: @redC;
 
 					&:hover {
-						background-color: @redA;
+						background-color: @redD;
 					}
 
 				}
 
 				.btnApply {
-					background-color: @greenB;
+					background-color: @greenC;
 
 					&:hover {
-						background-color: @greenA;
+						background-color: @greenD;
 					}
 
 				}
